# fastapi

./: main.py  pyproject.toml
apiintegration/: api.py
db/: db.py
dto/: EmployeeRequest.py  EmployeeResponce.py  EmployeeUpdate.py
model/: Employee.py  main.py
service/: employee_services.py
test/: test_employee_service.py
test/emp_service/: test_add_service.py
